<resources>
    <string name="app_name">WeLearn</string>
    <string name="about">About</string>
    <string name="test">Test</string>
    <string name="toolkits">Toolkits</string>
    <string name="materials">Materials</string>
    <string name="video">Video</string>
    <string name="tips">Tips</string>
    <string name="video_list">Video List</string>
    <string name="home">Home</string>
    <string name="please_check_device_internet_connection">Please check device internet connection</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="both">Both</string>
    <string name="dismiss">Dismiss</string>
    <string name="tips_online">Tips: Online</string>
    <string name="tips_offline">Tips: Offline</string>
    <string name="tips_online_offline">Tips: Online / Offline</string>
    <string name="test_result">Test Result</string>
    <string name="selection_of_content_n_n_the_teacher_describes_a_critical_incident_critical_incidents_are_tools_for_increasing_our_awareness_and_understanding_of_human_attitudes_expectations_behaviours_and_interactions_apedaile_schill_2008_the_critical_incident_could_range_from_not_being_time_conscious_respect_towards_authority_being_able_to_speak_one_s_mind_etc_one_way_of_identifying_such_incidents_as_proposed_by_the_developers_of_the_tool_fiedler_mitchell_triandis_1971_is_to_ask_the_students_about_intercultural_occurrences_or_events_that_highlighted_differences_in_attitude_or_behaviour_towards_members_of_other_cultures_such_events_could_be_pleasant_unpleasant_or_non_understandable_occurrences_this_is_an_example_of_a_critical_incident_as_described_by_the_developers_of_the_tool_this_example_was_posed_by_an_american_student_studying_in_thailand_the_student_indicated_that_he_had_had_a_number_of_appointments_with_thai_teachers_and_that_one_thing_that_bothered_him_considerably_was_the_lack_of_punctuality_of_the_thai_professors_he_asked_some_of_his_fellow_thai_students_if_they_were_angry_or_disturbed_over_the_tardiness_of_their_teachers_and_they_indicated_that_this_happened_rather_frequently_and_that_yes_it_disturbed_them_very_much_the_american_thought_about_saying_something_to_the_teacher_but_decided_against_it_when_the_thai_students_said_very_strongly_that_although_they_were_disturbed_they_would_never_show_their_feelings_to_their_professor_fiedler_mitchell_triandis_1971_n_n_use_the_content_to_simulate_an_encounter_n_n_the_next_step_is_for_the_teacher_to_contextualize_the_critical_incident_in_such_a_way_that_it_provides_the_answer_the_student_needs_the_developers_of_the_tool_describe_an_example_of_such_contextualization_one_day_a_thai_administrator_of_middle_academic_rank_kept_two_of_his_assistants_waiting_about_an_hour_for_an_appointment_the_assistants_although_very_angry_did_not_show_it_while_they_waited_when_the_administrator_walked_in_at_last_he_acted_as_if_he_were_not_late_he_made_no_apology_or_explanation_after_he_was_settled_in_his_office_he_called_his_assistants_in_and_they_all_began_working_on_the_business_for_which_the_administrator_had_set_the_meeting_source_fiedler_mitchell_triandis_1971_the_contextualization_reveals_the_cultural_response_of_locals_to_the_critical_incident_inorder_to_simulate_and_contextualize_critical_incidents_the_teacher_ought_to_be_conversant_with_the_culture_in_question_the_teacher_can_educate_his_herself_by_either_reading_or_watching_tv_documentaries_about_that_culture_n_n_provide_possible_feedback_and_alternatives_n_n_the_third_step_involves_the_teacher_leading_the_student_in_a_reflection_process_the_reflection_process_is_aimed_at_enabling_students_foreign_to_the_contextualized_culture_to_understand_the_cultural_basis_behind_the_critical_incident_it_also_enables_such_students_to_compare_their_culture_to_the_culture_being_contextualized_the_reflection_process_also_enables_the_students_to_correct_their_ethnocentric_errors_the_teacher_provides_a_set_of_one_correct_two_plausible_and_one_wrong_answers_to_assist_in_the_reflection_process_an_example_used_by_the_developers_on_the_tool_to_deal_with_the_american_student_s_dilemma_is_as_follows_n_n_o_the_thai_assistants_were_extremely_skillful_at_concealing_their_true_feelings_not_entirely_correct_n_n_o_the_thai_administrator_obviously_was_unaware_of_the_fact_that_he_was_an_hour_late_for_the_appointment_poor_choice_n_n_o_in_thailand_subordinates_are_required_to_be_polite_to_their_superiors_no_matter_what_happens_nor_what_their_rank_may_be_correct_n_n_o_clearly_since_no_one_commented_on_it_the_behavior_indicated_nothing_of_any_unusual_significance_to_any_of_the_thais_wrong_n_n_the_source_of_the_example_is_fiedler_mitchell_triandis_1971_students_are_given_time_to_reflect_and_provide_their_answers_the_teacher_then_provides_the_correct_answer_while_explaining_why_the_other_answers_were_either_not_totally_correct_or_wrong"><![CDATA[● Selection of content: \n \n The teacher describes a critical incident. “Critical incidents are tools for increasing our awareness and understanding of human attitudes, expectations, behaviours, and interactions” (Apedaile & Schill, 2008). The critical incident could range from not being time conscious, respect towards authority, being able to speak one\'s mind, etc. One way of identifying such incidents, as proposed by the developers of the tool (Fiedler, Mitchell, & Triandis, 1971), is to ask the students about intercultural occurrences or events that highlighted differences in attitude or behaviour towards members of other cultures. Such events could be pleasant, unpleasant or non-understandable occurrences. This is an example of a critical incident as described by the developers of the tool. This example was posed by an American student studying in Thailand. “The student indicated that he had had a number of appointments with Thai teachers, and that one thing that bothered him considerably was the lack of punctuality of the Thai professors. He asked some of his fellow Thai students if they were angry or disturbed over the tardiness of their teachers and they indicated that this happened rather frequently and that, yes, it disturbed them very much. The American thought about saying something to the teacher, but decided against it when the Thai students said very strongly that although they were disturbed they would never show their feelings to their professor”( (Fiedler, Mitchell, & Triandis, 1971)). \n \n ● Use the content to simulate an encounter: \n \n The next step is for the teacher to contextualize the critical incident in such a way that it provides the answer the student needs. The developers of the tool describe an example of such contextualization. “One day a Thai administrator of middle academic rank kept two of his assistants waiting about an hour for an appointment. The assistants, although very angry, did not show it while they waited. When the administrator walked in at last, he acted as if he were not late. He made no apology or explanation. After he was settled in his office, he called his assistants in and they all began working on the business for which the administrator had set the meeting” (source (Fiedler, Mitchell, & Triandis, 1971)). The contextualization reveals the cultural response of locals to the critical incident. Inorder to simulate and contextualize critical incidents, the teacher ought to be conversant with the culture in question. The teacher can educate his/herself by either reading or watching TV documentaries about that culture. \n \n ● Provide possible feedback and alternatives: \n \n The third step involves the teacher leading the student in a reflection process. The reflection process is aimed at enabling students, foreign to the contextualized culture, to understand the cultural basis behind the critical incident. It also enables such students to compare their culture to the culture being contextualized. The reflection process also enables the students to correct their ethnocentric errors. The teacher provides a set of one correct, two plausible and one wrong answers to assist in the reflection process. An example used by the developers on the tool to deal with the American student’s dilemma is as follows: \n \n o The Thai assistants were extremely skillful at concealing their true feelings. (not entirely correct). \n \n o The Thai administrator obviously was unaware of the fact that he was an hour late for the appointment (poor choice) \n \n o In Thailand, subordinates are required to be polite to their superiors, no matter what happens, nor what their rank may be. (correct) \n \n o Clearly, since no one commented on it, the behavior indicated nothing of any unusual significance to any of the Thais (wrong) \n \n The source of the example is (Fiedler, Mitchell, & Triandis, 1971) Students are given time to reflect and provide their answers. The teacher then provides the correct answer, while explaining why the other answers were either not totally correct or wrong.]]></string>
</resources>