<?xml version="1.0" encoding="utf-8"?>
<layout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:weightSum="100"
        tools:context=".DashboardActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_weight="5"
            android:background="@color/color_tips"
            android:scaleType="fitXY"
            android:src="@drawable/cutest" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:weightSum="10"
            android:layout_weight="28">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivWeLearn"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/ic_welearn" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_blue_border"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_2sdp">

                        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/cvAbout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            card_view:cardCornerRadius="@dimen/card_corner_radious"
                            card_view:cardElevation="0dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/color_about"
                                android:padding="@dimen/_12sdp"
                                android:src="@drawable/ic_about" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/about"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_blue_border"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_2sdp">


                        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/cvTest"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            card_view:cardCornerRadius="@dimen/card_corner_radious"
                            card_view:cardElevation="0dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/color_test"
                                android:padding="@dimen/_12sdp"
                                android:src="@drawable/ic_test" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/test"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"

                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_blue_border"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_2sdp">


                        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/cvPractice"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            card_view:cardCornerRadius="@dimen/card_corner_radious"
                            card_view:cardElevation="0dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/color_practice"
                                android:padding="@dimen/_12sdp"
                                android:src="@drawable/ic_practice" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/toolkits"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_blue_border"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_2sdp">


                        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/cvMaterials"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            card_view:cardCornerRadius="@dimen/card_corner_radious"
                            card_view:cardElevation="0dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/color_materials"
                                android:padding="@dimen/_12sdp"
                                android:src="@drawable/ic_materials" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/materials"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_blue_border"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_2sdp">


                        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/cvVideo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            card_view:cardCornerRadius="@dimen/card_corner_radious"
                            card_view:cardElevation="0dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/color_video"
                                android:padding="@dimen/_12sdp"
                                android:src="@drawable/ic_video" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/video"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_rounded_blue_border"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/_2sdp">


                        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/cvTips"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            card_view:cardCornerRadius="@dimen/card_corner_radious"
                            card_view:cardElevation="0dp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/color_tips"
                                android:padding="@dimen/_12sdp"
                                android:src="@drawable/ic_tips" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/tips"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="7"
            android:background="@color/color_tips"
            android:scaleType="fitXY"
            android:src="@drawable/eu_flag_co_funded_pos_rgb_right" />

    </LinearLayout>
</layout>